# dem-handler

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  dem-test.py  environment.yaml  environment.yml  pyproject.toml
.github/workflows/: ci.yml  pixi-ci.yml  run-pytest.yml
dem_handler/: __init__.py
dem_handler/dem/: cop_glo30.py  geoid.py  rema.py
dem_handler/download/: aio_aws.py  aws.py
dem_handler/utils/: aws.py  create_dem_vrt.py  get_rema_index.py  raster.py  rio_tools.py  spatial.py
docs/: README.md  developer_setup.md
tests/: download_test_data.py  test_async.py  test_utils.py
tests/cop_glo30/: test_dem_cop.py
tests/rema/: test_dem_rema.py
tests/utils/: test_check_dem_bounds.py  test_utils.py
