[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dem-handler"
requires-python = ">=3.8"
authors = [
    {name="Geoscience Australia", email="DigitalEarthAntarctica@ga.gov.au"},
]
description = "DEM handling utility"
classifiers=[
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
version = "0.1" # TODO base this on files in project
dependencies = ["boto3>=1.37.1", "geopandas>=1.0.1", "requests>=2.32.3"]

[project.urls]
Homepage = "https://github.com/GeoscienceAustralia/dem-handler.git"
# Documentation = "XXX"

#[project.scripts]

[tool.pytest.ini_options]
testpaths = ["tests/*"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
dem_handler = ["**/*.gpkg"]
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
dem-handler = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
gdal = ">=3.10.2"
rasterio = ">=1.4.3"
pyogrio = ">=0.10.0"
multiprocess = ">=0.70.17"
aioboto3 = "==14.1.0"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
download_test_data = "python tests/download_test_data.py"
test = { cmd = "pytest", depends-on = ["download_test_data"] }

[dependency-groups]
test = ["pytest", "coverage"]
